--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>Angular With Webpack</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />-->
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>Loading... </my-app>
   </body>
 </html>
