--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Angular With Webpack</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <!--<link rel="icon" type="image/x-icon" href="favicon.ico" />-->
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />-->
   </head>
   <body>
